--- a/homepage.html
+++ b/homepage.html
@@ -248,5 +248,39 @@
             </div>
         </div>
     </header>
+
+    
+    <div>
+        <canvas id="meuCanvas"></canvas>
+    </div>
+
+    <div>
+        <p>
+            <button id="btn_play">Play</button>
+            <button id="btn_pause">Pause</button>
+            <button id="btn_stop">Stop</button>
+            <button id="btn_reverse">Reverse</button>
+            <label>Loop:
+                <select id="menu_loop">
+                    <option value="1">Uma Vez</option>
+                    <option value="2" selected>Repetir</option>
+                    <option value="3">Ping Pong</option>
+                </select>
+            </label>
+        </p>
+
+    </div>
+
+  <!-- Scripts -->
+  <script async src="/node_modules/es-module-shims.js"></script>
+  <script type="importmap">
+    {
+    "imports": {
+      "three": "/node_modules/three/build/three.module.js",
+      "three/addons/": "/node_modules/three/examples/jsm/"
+      }
+    }
+  </script>
+  <script type="module" defer src="./main.js"></script>
 </body>
 </html>
