--- a/homepage.html
+++ b/homepage.html
@@ -32,7 +32,6 @@
             border-radius: 20px;
         }
 
-        /* Flexbox container para canvas e detalhes */
         .content {
             display: flex;
             flex-wrap: wrap;
@@ -47,7 +46,7 @@
         }
 
         canvas {
-            border: 1px solid #ccc; /* Opcional: borda para destacar o canvas */
+            border: 1px solid #ccc;
             width: 100%;
             height: auto;
         }
@@ -73,7 +72,7 @@
 
         .product-details {
             flex: 1;
-            max-width: 400px;
+            max-width: 100%; /* Modificado para ocupar toda a largura */
             background-color: #fff;
             padding: 20px;
             border-radius: 8px;
@@ -102,6 +101,9 @@
         }
 
         .product-actions {
+            display: flex;
+            align-items: center;
+            gap: 10px;
             margin-top: 20px;
         }
 
@@ -120,6 +122,16 @@
             background-color: #333;
         }
 
+        .heart-icon {
+            cursor: pointer;
+            transition: fill 0.3s ease, stroke 0.3s ease;
+        }
+
+        .heart-icon:hover {
+            fill: black;
+            stroke: white;
+        }
+
         .details-list {
             margin-top: 20px;
             list-style: none;
@@ -130,33 +142,45 @@
             margin: 10px 0;
             font-size: 14px;
         }
+
+        .policy-features {
+            display: flex;
+            justify-content: space-between;
+            gap: 10px;
+            font-size: 13px;
+        }
+
+        .policy-features div {
+            background-color: #fff;
+            padding: 10px;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            font-weight: bold;
+            width: 48%;
+        }
     </style>
 </head>
 <body>
     <div id="navbar"></div>
 
-    <!-- Canvas e detalhes do produto lado a lado -->
     <div class="content">
-        <!-- Container para o canvas e botões -->
         <div class="canvas-container">
-            <canvas id="meuCanvas" width="400" height="300"></canvas>
-            <!-- Botões abaixo do canvas -->
+            <canvas id="meuCanvas" width="600" height="300"></canvas>
             <div class="controls">
-                <button id="btn_play">Play</button>
-                <button id="btn_pause">Pause</button>
-                <button id="btn_stop">Stop</button>
-                <button id="btn_reverse">Reverse</button>
-                <label>Loop:
-                    <select id="menu_loop">
-                        <option value="1">Uma Vez</option>
-                        <option value="2" selected>Repetir</option>
-                        <option value="3">Ping Pong</option>
-                    </select>
-                </label>
+                Support Joint
+                <input id="animation-slider-supportjoint" type="range" min="0" max="100" step="1" value="0" style="width: 100%;">
+                Long arm
+                <input id="animation-slider-longarm" type="range" min="0" max="100" step="1" value="0" style="width: 100%;">
+                Short Arm
+                <input id="animation-slider-shortarm" type="range" min="0" max="100" step="1" value="0" style="width: 100%;">
+                Arm To Abajur Joint
+                <input id="animation-slider-armtoabajurjoint" type="range" min="0" max="100" step="1" value="0" style="width: 100%;">
+                Abajur Joint
+                <input id="animation-slider-abajurjoint" type="range" min="0" max="100" step="1" value="0" style="width: 100%;">
             </div>
         </div>
 
-        <!-- Detalhes do produto -->
         <div class="product-details">
             <h1>Aplique Articulado, Moke</h1>
             <div class="rating">⭐ 2,8/5 (26 avaliações)</div>
@@ -165,24 +189,37 @@
                 <span class="discount">-20%</span><br>
                 <strong>111,20 €</strong>
             </div>
-            <div class="product-actions">
-                <button>Adicionar ao Carrinho</button>
-            </div>
             <ul class="details-list">
                 <li>Cor: Castanho</li>
                 <li>Tamanho: Único</li>
             </ul>
+            <div class="product-actions">
+                <button>Juntar ao Carrinho</button>
+                <svg xmlns="http://www.w3.org/2000/svg" class="heart-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 20.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path>
+                </svg>
+            </div>
+
+            <div class="additional-info">
+                <p><span>⏱</span> Disponível para envio até 9 dias úteis</p>
+            </div>
+            <div class="return-policy">
+                <p>30 DIAS PARA TROCAR OU DEVOLVER</p>
+            </div>
+            <div class="policy-features">
+                <div>✔️ <strong>ENVIO GRÁTIS*</strong></div>
+                <div>✔️ <strong>DEVOLUÇÃO GRÁTIS*</strong></div>
+            </div>
         </div>
     </div>
 
-    <!-- Scripts -->
     <script async src="/node_modules/es-module-shims.js"></script>
     <script type="importmap">
     {
-      "imports": {
-        "three": "/node_modules/three/build/three.module.js",
-        "three/addons/": "/node_modules/three/examples/jsm/"
-      }
+        "imports": {
+            "three": "/node_modules/three/build/three.module.js",
+            "three/addons/": "/node_modules/three/examples/jsm/"
+        }
     }
     </script>
     <script type="module" defer src="./main.js"></script>
@@ -203,8 +240,18 @@
             }
         }
 
-        // Carregar a navbar ao iniciar a página
         loadNavbar();
+
+        document.querySelector('.heart-icon').addEventListener('click', function () {
+            this.classList.toggle('active');
+            if (this.classList.contains('active')) {
+                this.setAttribute('fill', 'black');
+                this.setAttribute('stroke', 'white');
+            } else {
+                this.setAttribute('fill', 'none');
+                this.setAttribute('stroke', 'black');
+            }
+        });
     </script>
 </body>
 </html>
