--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Navbar Ajustada</title>
+    <title>Aplique articulado</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,7 +33,7 @@
         }
 
         .content {
-            display: flex;
+            display: flex; /* Flex container */
             flex-wrap: wrap;
             align-items: flex-start;
             gap: 20px;
@@ -71,8 +71,8 @@
         }
 
         .product-details {
-            flex: 1;
-            max-width: 100%; /* Modificado para ocupar toda a largura */
+            flex: 2; /* Flex value increased to take more space */
+            max-width: 600px; /* Ensures it doesn’t stretch too much */
             background-color: #fff;
             padding: 20px;
             border-radius: 8px;
@@ -116,6 +116,7 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            width: 100%;
         }
 
         .product-actions button:hover {
@@ -159,6 +160,16 @@
             font-weight: bold;
             width: 48%;
         }
+
+        .box {
+            border: 2px solid #000;
+            padding: 10px;
+            width: 560px;
+            margin: 20px auto;
+            text-align: center;
+            border-radius: 5px;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+        }
     </style>
 </head>
 <body>
@@ -168,16 +179,26 @@
         <div class="canvas-container">
             <canvas id="meuCanvas" width="600" height="300"></canvas>
             <div class="controls">
-                Support Joint
-                <input id="animation-slider-supportjoint" type="range" min="0" max="100" step="1" value="0" style="width: 100%;">
-                Long arm
-                <input id="animation-slider-longarm" type="range" min="0" max="100" step="1" value="0" style="width: 100%;">
-                Short Arm
-                <input id="animation-slider-shortarm" type="range" min="0" max="100" step="1" value="0" style="width: 100%;">
-                Arm To Abajur Joint
-                <input id="animation-slider-armtoabajurjoint" type="range" min="0" max="100" step="1" value="0" style="width: 100%;">
-                Abajur Joint
-                <input id="animation-slider-abajurjoint" type="range" min="0" max="100" step="1" value="0" style="width: 100%;">
+                <div class="box">
+                    <label for="animation-slider-supportjoint">Support Joint</label>
+                    <input id="animation-slider-supportjoint" class="slider" type="range" min="0" max="100" step="1" value="0">
+                </div>
+                <div class="box">
+                    <label for="animation-slider-supportjoint">Long Arm</label>
+                    <input id="animation-slider-longarm" class="slider" type="range" min="0" max="100" step="1" value="0">
+                </div>
+                <div class="box">
+                    <label for="animation-slider-supportjoint">Short Arm</label>
+                    <input id="animation-slider-shortarm" class="slider" type="range" min="0" max="100" step="1" value="0">
+                </div>
+                <div class="box">
+                    <label for="animation-slider-supportjoint">Arm To Abajur Joint</label>
+                    <input id="animation-slider-armtoabajurjoint" class="slider" type="range" min="0" max="100" step="1" value="0">
+                </div>
+                <div class="box">
+                    <label for="animation-slider-supportjoint">Abajur Joint</label>
+                    <input id="animation-slider-abajurjoint" class="slider" type="range" min="0" max="100" step="1" value="0">
+                </div>
             </div>
         </div>
 
