--- a/homepage.html
+++ b/homepage.html
@@ -13,8 +13,8 @@
         }
 
         header {
-            padding: 5px; /* Diminuído o padding */
-            margin-bottom: 10px; /* Diminuído o espaçamento entre o header e o conteúdo */
+            padding: 5px;
+            margin-bottom: 10px;
             background-color: #fff;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             display: flex;
@@ -28,7 +28,7 @@
 
         .search-container input {
             width: 300px;
-            padding: 8px; /* Diminuído o padding */
+            padding: 8px;
             border: 1px solid #ccc;
             border-radius: 20px;
         }
@@ -37,9 +37,9 @@
             display: flex;
             flex-wrap: wrap;
             align-items: flex-start;
-            gap: 10px; /* Diminuído o espaçamento entre os itens */
-            padding: 10px; /* Diminuído o padding */
-            margin-top: 10px; /* Diminuído o espaçamento superior */
+            gap: 10px;
+            padding: 10px;
+            margin-top: 10px;
         }
 
         .canvas-container {
@@ -56,12 +56,12 @@
         .controls {
             display: flex;
             flex-direction: column;
-            gap: 10px; /* Diminuído o espaçamento */
+            gap: 10px;
         }
 
         .row {
             display: flex;
-            gap: 10px; /* Diminuído o espaçamento */
+            gap: 10px;
             justify-content: space-between;
         }
 
@@ -78,21 +78,21 @@
             flex: 2;
             max-width: 600px;
             background-color: #fff;
-            padding: 10px; /* Diminuído o padding */
+            padding: 10px;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-top: 10px; /* Diminuído o espaçamento superior */
+            margin-top: 10px;
         }
 
         .product-details h1 {
             font-size: 24px;
-            margin-bottom: 5px; /* Diminuído o espaçamento abaixo do título */
+            margin-bottom: 5px;
         }
 
         .product-details .price {
             font-size: 18px;
             color: #111;
-            margin: 5px 0; /* Diminuído o espaçamento */
+            margin: 5px 0;
         }
 
         .product-details .old-price {
@@ -109,7 +109,7 @@
             display: flex;
             align-items: center;
             gap: 10px;
-            margin-top: 15px; /* Diminuído o espaçamento superior */
+            margin-top: 15px;
         }
 
         .product-actions button {
@@ -139,13 +139,13 @@
         }
 
         .details-list {
-            margin-top: 10px; /* Diminuído o espaçamento */
+            margin-top: 10px;
             list-style: none;
             padding: 0;
         }
 
         .details-list li {
-            margin: 5px 0; /* Diminuído o espaçamento */
+            margin: 5px 0;
             font-size: 14px;
         }
 
@@ -158,7 +158,7 @@
 
         .policy-features div {
             background-color: #fff;
-            padding: 8px; /* Diminuído o padding */
+            padding: 8px;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             text-align: center;
@@ -170,13 +170,12 @@
             border: 2px solid #000;
             padding: 10px;
             width: 560px;
-            margin: 10px auto; /* Diminuído o espaçamento superior */
+            margin: 10px auto;
             text-align: center;
             border-radius: 5px;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
         }
 
-        /* Estilos para a caixa de quantidade */
         .box-quantidade {
             display: flex;
             flex-direction: column;
@@ -288,6 +287,8 @@
         </div>
     </div>
 
+    <div id="description"></div>
+
     <script async src="/node_modules/es-module-shims.js"></script>
     <script type="importmap">
     {
@@ -315,7 +316,23 @@
             }
         }
 
+        async function loadDescription() {
+            const navbarContainer = document.getElementById('description');
+            try {
+                const response = await fetch('./descricao.html');
+                if (response.ok) {
+                    const navbarHTML = await response.text();
+                    navbarContainer.innerHTML = navbarHTML;
+                } else {
+                    console.error('Erro ao carregar descricao:', response.statusText);
+                }
+            } catch (error) {
+                console.error('Erro ao carregar descricao:', error);
+            }
+        }
+
         loadNavbar();
+        loadDescription();
 
         document.querySelector('.heart-icon').addEventListener('click', function () {
             this.classList.toggle('active');
@@ -327,8 +344,6 @@
                 this.setAttribute('stroke', 'black');
             }
         });
-
-
     </script>
 </body>
 </html>
