--- a/homepage.html
+++ b/homepage.html
@@ -44,7 +44,7 @@
 
         .canvas-container {
             flex: 1;
-            max-width: 600px;
+            max-width: 800px;
         }
 
         canvas {
@@ -54,24 +54,22 @@
         }
 
         .controls {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
+            text-align: center;
+            margin-top: 10px;
         }
 
-        .row {
-            display: flex;
-            gap: 10px;
-            justify-content: space-between;
+        .controls button,
+        .controls select {
+            margin: 5px;
+            padding: 10px 15px;
+            font-size: 14px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            cursor: pointer;
         }
 
-        .box {
-            flex: 1;
-            min-width: 150px;
-        }
-
-        input[type="range"] {
-            width: 100%;
+        .controls button:hover {
+            background-color: #f0f0f0;
         }
 
         .product-details {
@@ -169,45 +167,9 @@
         .box {
             border: 2px solid #000;
             padding: 10px;
-            width: 560px;
-            margin: 10px auto;
+            width: 80%;
+            margin: 15px auto;
             text-align: center;
-            border-radius: 5px;
-            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        .box-quantidade {
-            display: flex;
-            flex-direction: column;
-            gap: 5px;
-            margin-top: 10px;
-        }
-
-        .quantity-controls {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .quantity-controls button {
-            font-size: 20px;
-            padding: 5px 10px;
-            background-color: #ddd;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .quantity-controls button:hover {
-            background-color: #ccc;
-        }
-
-        #product-quantity {
-            width: 60px;
-            text-align: center;
-            padding: 5px;
-            font-size: 16px;
-            border: 1px solid #ccc;
             border-radius: 5px;
         }
     </style>
@@ -217,34 +179,29 @@
 
     <div class="content">
         <div class="canvas-container">
-            <canvas id="meuCanvas" width="600" height="300"></canvas>
-            <div class="controls">
-                <div class="row">
-                    <div class="box">
-                        <label for="animation-slider-supportjoint">Support Joint</label>
-                        <input id="animation-slider-supportjoint" class="slider" type="range" min="0" max="100" step="1" value="0">
-                    </div>
-                    <div class="box">
-                        <label for="animation-slider-longarm">Long Arm</label>
-                        <input id="animation-slider-longarm" class="slider" type="range" min="0" max="100" step="1" value="0">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="box">
-                        <label for="animation-slider-shortarm">Short Arm</label>
-                        <input id="animation-slider-shortarm" class="slider" type="range" min="0" max="100" step="1" value="0">
-                    </div>
-                    <div class="box">
-                        <label for="animation-slider-abajurjoint">Abajur Joint</label>
-                        <input id="animation-slider-abajurjoint" class="slider" type="range" min="0" max="100" step="1" value="0">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="box">
-                        <label for="animation-slider-armtoabajurjoint">Arm To Abajur Joint</label>
-                        <input id="animation-slider-armtoabajurjoint" class="slider" type="range" min="0" max="100" step="1" value="0">
-                    </div>
-                </div>
+            <canvas id="meuCanvas"></canvas>
+        </div>
+
+        <div class="controls">
+            <div class="box">
+                Support Joint<br>
+                <input id="animation-slider-supportjoint" class="slider" type="range" min="0" max="100" step="1" value="50">
+            </div>
+            <div class="box">
+                Long Arm<br>
+                <input id="animation-slider-longarm" class="slider" type="range" min="0" max="100" step="1" value="50">
+            </div>
+            <div class="box">
+                Short Arm<br>
+                <input id="animation-slider-shortarm" class="slider" type="range" min="0" max="100" step="1" value="50">
+            </div>
+            <div class="box">
+                Arm To Abajur Joint<br>
+                <input id="animation-slider-armtoabajur" class="slider" type="range" min="0" max="100" step="1" value="50">
+            </div>
+            <div class="box">
+                Abajur Joint<br>
+                <input id="animation-slider-abajur" class="slider" type="range" min="0" max="100" step="1" value="50">
             </div>
         </div>
 
@@ -260,13 +217,6 @@
                 <li>Cor: Castanho</li>
                 <li>Tamanho: Único</li>
             </ul>
-
-            <div class="box-quantidade">
-                <div class="quantity-controls">
-                    <input id="product-quantity" type="number" value="1" min="1" step="1">
-                </div>
-            </div>
-
             <div class="product-actions">
                 <button>Juntar ao Carrinho</button>
                 <svg xmlns="http://www.w3.org/2000/svg" class="heart-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
