--- a/homepage.html
+++ b/homepage.html
@@ -142,9 +142,20 @@
             padding: 0;
         }
 
-        .details-list li {
-            margin: 5px 0;
+        .details-list .detail-button {
+            display: inline-block;
+            width: 100%;
+            padding: 8px 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
             font-size: 14px;
+            background-color: #f9f9f9;
+            cursor: pointer;
+            text-align: left;
+        }
+
+        .details-list .detail-button:hover {
+            background-color: #f0f0f0;
         }
 
         .policy-features {
@@ -165,7 +176,7 @@
         }
 
         .box {
-            border: 2px solid #000;
+
             padding: 10px;
             width: 80%;
             margin: 15px auto;
@@ -203,6 +214,7 @@
                 Abajur Joint<br>
                 <input id="animation-slider-abajur" class="slider" type="range" min="0" max="100" step="1" value="50">
             </div>
+            <button id="btn-light">Turn light off</button>
         </div>
 
         <div class="product-details">
@@ -214,8 +226,8 @@
                 <strong>111,20 €</strong>
             </div>
             <ul class="details-list">
-                <li>Cor: Castanho</li>
-                <li>Tamanho: Único</li>
+                <li><button class="detail-button">Cor: Castanho</button></li>
+                <li><button class="detail-button">Tamanho: Único</button></li>
             </ul>
             <div class="product-actions">
                 <button>Juntar ao Carrinho</button>
