--- a/homepage.html
+++ b/homepage.html
@@ -26,6 +26,13 @@
             height: 50px;
         }
 
+        .search-container input {
+            width: 300px;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 20px;
+        }
+
         .content {
             display: flex;
             flex-wrap: wrap;
@@ -169,60 +176,13 @@
         }
 
         .box {
+
             padding: 10px;
             width: 80%;
             margin: 15px auto;
             text-align: center;
             border-radius: 5px;
         }
-
-        .modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-        }
-
-        .modal-content {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            text-align: center;
-            width: 80%;
-            max-width: 400px;
-        }
-
-        .modal-content .color-option {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            margin-bottom: 10px;
-            cursor: pointer;
-        }
-
-        .modal-content .color-option.selected {
-            border-color: #000;
-            background-color: #f0f0f0;
-        }
-
-        .modal-close {
-            cursor: pointer;
-            background-color: red;
-            color: #fff;
-            padding: 8px 12px;
-            border: none;
-            border-radius: 5px;
-            margin-top: 10px;
-        }
-
     </style>
 </head>
 <body>
@@ -254,7 +214,7 @@
                 Abajur Joint<br>
                 <input id="animation-slider-abajur" class="slider" type="range" min="0" max="100" step="1" value="50">
             </div>
-            <button id="btn-light">Turn light on</button>
+            <button id="btn-light">Turn light off</button>
         </div>
 
         <div class="product-details">
@@ -266,7 +226,7 @@
                 <strong>111,20 €</strong>
             </div>
             <ul class="details-list">
-                <li><button class="detail-button" id="colorButton">Cor: Castanho</button></li>
+                <li><button class="detail-button">Cor: Castanho</button></li>
                 <li><button class="detail-button">Tamanho: Único</button></li>
             </ul>
             <div class="product-actions">
@@ -286,15 +246,6 @@
                 <div>✔️ <strong>ENVIO GRÁTIS*</strong></div>
                 <div>✔️ <strong>DEVOLUÇÃO GRÁTIS*</strong></div>
             </div>
-        </div>
-    </div>
-
-    <div id="colorModal" class="modal">
-        <div class="modal-content">
-            <h2>2 cores disponíveis</h2>
-            <div class="color-option" data-color="castanho">Castanho</div>
-            <div class="color-option" data-color="preto">Preto (não disponível)</div>
-            <button class="modal-close">Fechar</button>
         </div>
     </div>
 
@@ -353,34 +304,6 @@
             } else {
                 this.setAttribute('fill', 'none');
                 this.setAttribute('stroke', 'black');
-            }
-        });
-
-        const colorButton = document.getElementById('colorButton');
-        const colorModal = document.getElementById('colorModal');
-        const modalClose = document.querySelector('.modal-close');
-        const colorOptions = document.querySelectorAll('.color-option');
-
-        colorButton.addEventListener('click', () => {
-            colorModal.style.display = 'flex';
-        });
-
-        modalClose.addEventListener('click', () => {
-            colorModal.style.display = 'none';
-        });
-
-        colorOptions.forEach(option => {
-            option.addEventListener('click', () => {
-                colorOptions.forEach(opt => opt.classList.remove('selected'));
-                option.classList.add('selected');
-                colorButton.textContent = `Cor: ${option.dataset.color}`;
-                colorModal.style.display = 'none';
-            });
-        });
-
-        window.addEventListener('click', (event) => {
-            if (event.target === colorModal) {
-                colorModal.style.display = 'none';
             }
         });
     </script>
