--- a/homepage.html
+++ b/homepage.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aplique articulado</title>
+    <title>Aplique articulado, moke Am.Pm | La Redoute</title>
+    <link rel="icon" href="./images/laredoute_logo.png" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
