--- a/homepage.html
+++ b/homepage.html
@@ -276,7 +276,7 @@
                 <strong>111,20 €</strong>
             </div>
             <ul class="details-list">
-                <li><button class="detail-button" id="colorButton">Cor: Castanho</button></li>
+                <li><button class="detail-button" id="colorButton">Cor: Preto</button></li>
                 <li><button class="detail-button">Tamanho: Único</button></li>
             </ul>
             <div class="product-actions">
@@ -302,8 +302,8 @@
     <div id="colorModal" class="modal">
         <div class="modal-content">
             <h2>2 cores disponíveis</h2>
-            <div class="color-option" data-color="castanho">Castanho</div>
-            <div class="color-option disabled" data-color="preto">Preto (não disponível)</div>
+            <div class="color-option" data-color="preto">Preto</div>
+            <div class="color-option disabled" data-color="castanho">Castanho (não disponível)</div>
             <button class="modal-close">Fechar</button>
         </div>
     </div>
