--- a/erro.html
+++ b/erro.html
@@ -30,7 +30,7 @@
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             max-width: 400px;
-            margin: 200px auto; /* Aumentei o espaço acima da div */
+            margin: 200px auto; 
         }
 
         .content h1 {
